--- a/style.css
+++ b/style.css
@@ -3,8 +3,12 @@
   box-sizing: border-box;
 }
 body {
-  background-color: #b8c6db;
-  background-image: linear-gradient(315deg, #b8c6db 0%, #f5f7f7 100%);
+  /* background-color: #b8c6db; */
+  background-image: linear-gradient(rgba(0, 0, 0, 0.527), rgba(0, 0, 0, 0.7)),
+    url("images/bg.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
   font-family: "Poppins", sans-serif;
   display: flex;
   align-items: center;
